package edu.fiuba.algo3.modelo.moduloMapa;

public class Posicion {
    private int x;
    private int y;
    public Posicion(int i, int i1) {
        x = i;
        y = i1;
    }
    public int X(){
        return x;
    }
    public int Y(){
        return y;
    }
}
